[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
solana-sdk = "1.16.15"
spl-token = "3.5.0"
base64 = "*"
bs58 = "*"
ed25519-dalek = "1.0.1"
